test/valid/41625_AbstractClassExtendsConcrete/A.plume
/**
 * Valid Class.
 * Normal class, nothing special. Move along...
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 class A extends Object is 
 	method fa : () -> String is
 		"nothing to see here..." 
 		